--- a/aws_template.tt
+++ b/aws_template.tt
@@ -26,7 +26,7 @@
                 <ul class="list-group">
               [%- END -%]
               <li class="list-group-item">
-                <a class="text-decoration-none" href="https://docs.aws.amazon.com/IAM/latest/UserGuide/list_[% action.service.replace(' ', '').lower %].html#[% service.replace(' ', '').lower _ '-' _ action.action.remove('\w+:') %]">[% action.action %]</a>
+                <a class="text-decoration-none" href="[% action.url %]#[% action.url.replace('.*list_(.*).html$', '$1').lower _ '-' _ action.action.remove('\w+:') %]">[% action.action %]</a>
                 <div class="float-right">
                   [%- unique_resources = [] -%]
                   [%- FOREACH resource IN action.resources -%]
